src/objects/SBQQ__WebQuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>Product Family for the product referenced by this line item.</description>
        <formula>TEXT(SBQQ__Product__r.Family)</formula>
        <inlineHelpText>Product Family for the product referenced by this line item.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Name for the product referenced by this line item.</description>
        <formula>SBQQ__Product__r.Name</formula>
        <inlineHelpText>Name for the product referenced by this line item.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product quoted by this line item.</description>
        <inlineHelpText>Product quoted by this line item.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Web Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProratedListPrice__c</fullName>
        <description>Prorated list unit price.</description>
        <inlineHelpText>Prorated list unit price.</inlineHelpText>
        <label>Prorated List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProratedPrice__c</fullName>
        <description>Prorated price for the product quoted by this line item. This price will only differ from Special Price if the product is a subscription and the line item is being prorated.</description>
        <inlineHelpText>Prorated price for the product quoted by this line item. This price will only differ from Special Price if the product is a subscription and the line item is being prorated.</inlineHelpText>
        <label>Prorated Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of the line item being quoted.</description>
        <inlineHelpText>Quantity of the line item being quoted.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <description>Parent quote record.</description>
        <inlineHelpText>Parent quote record.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__WebQuote__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Unit price before additional discounts are applied.</description>
        <inlineHelpText>Unit price before additional discounts are applied.</inlineHelpText>
        <label>Regular Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__RegularTotal__c</fullName>
        <formula>IF(SBQQ__Renewal__c, 0, SBQQ__RegularPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this line item represents a product being renewed. Only non-subscription products for quote type &quot;Renewal&quot; will have this field set to true. Under normal circumstances this field should not be modified via UI.</description>
        <inlineHelpText>Indicates this line item represents a product being renewed. This field should not be modified.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being renewed if this line item represents a product renewal.</description>
        <inlineHelpText>Asset being renewed if this line item represents a product renewal.</inlineHelpText>
        <label>Renewed Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedSubscription__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Subscription being renewed by this quote line.</description>
        <inlineHelpText>Subscription being renewed by this quote line.</inlineHelpText>
        <label>Renewed Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Web Quote Lines</relationshipLabel>
        <relationshipName>RenewalWebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links this line to another line in the same quote whose product requires this line&apos;s product.</description>
        <inlineHelpText>Indicates which other product on this quote requires it.</inlineHelpText>
        <label>Required By</label>
        <referenceTo>SBQQ__WebQuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented Products, Index representing this Quote Line&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>This represents the segment that contains a unique value.</description>
        <inlineHelpText>This represents the segment that contains a unique value.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>This is the Column header label associated with this line.</description>
        <inlineHelpText>This is the Column header label associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote line.</description>
        <inlineHelpText>Source quote line item of cloned quote line item, if any.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__WebQuoteLine__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Source)</relationshipLabel>
        <relationshipName>WebClones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPriceDescription__c</fullName>
        <description>Name of the Discount Tier or description of Contracted Price that generated special price for this line item.</description>
        <inlineHelpText>Name of the Discount Tier or Contacted Price applied to get the special price for this line item.</inlineHelpText>
        <label>Special Price Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPriceType__c</fullName>
        <description>Stores the type of special price offered on this line item. Null value indicates there is no special pricing. Under normal circumstances this field should not be modified via UI.</description>
        <inlineHelpText>Type of special pricing extended.</inlineHelpText>
        <label>Special Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted Price</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Volume Discount</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special (volume-discounted or contracted) unit price for the product being quoted by this line item.</description>
        <inlineHelpText>Special unit price for this line item, such as volume discount or contracted price.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Date the service represented by this line item will begin (only applies if product is a subscription).</description>
        <inlineHelpText>The date the subscription for which this product begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscribedAssetIds__c</fullName>
        <description>Comma separated list of asset IDs covered by this subscription line. Only applicable to renewal quotes.</description>
        <inlineHelpText>List of assets covered by this subscription line item. Do not update unless instructed.</inlineHelpText>
        <label>Subscribed Asset IDs</label>
        <length>19000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List, Customer or Net product price.</description>
        <inlineHelpText>Indicates if subscription pricing uses List, Customer, or Net price.</inlineHelpText>
        <label>Subscription Base</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Category defined on the product to limit percent-of-total calculations to certain products.</description>
        <inlineHelpText>Category defined on the product to limit percent-of-total calculations to certain products.</inlineHelpText>
        <label>Subscription Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription product total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription product total to be used when calculating this line item price.</inlineHelpText>
        <label>Subscription Percent</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Determines how the subscription on this line item is priced. Blank value means this line contains product that&apos;s not a subscription.</description>
        <inlineHelpText>Determines how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Determines how dynamic subscription prices are calculated. If scope is set to &quot;Quote&quot; any non-subscription product is used in calculating every dynamic subscription. If scope is set to &quot;Group&quot; only products in the same group as the dynamic subscription are used.</description>
        <inlineHelpText>Determines how dynamic subscription prices are calculated: Quote uses all the non-subscription products in the quote while Group uses only non-subscription products in the same group.</inlineHelpText>
        <label>Subscription Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTargetPrice__c</fullName>
        <description>Price of the subscription target product on which maintenance should calculate.</description>
        <inlineHelpText>Price of the subscription target product on which maintenance should calculate.</inlineHelpText>
        <label>Subscription Target Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term for the subscription product in this line. If the product is not a subscription this value has no effect.</description>
        <inlineHelpText>Term for the subscription product in this line. If the product is not a subscription this value has no effect.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the line item is taxable.</description>
        <inlineHelpText>Select the checkbox to indicate that the line item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedWebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier within the term discount schedule used to discount this line item.</description>
        <inlineHelpText>Tier within the term discount schedule used to discount this line item.</inlineHelpText>
        <label>Term Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedWebQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>Discount calculated by applying subscription term against term discount schedule.</description>
        <inlineHelpText>Discount calculated by applying subscription term against term discount schedule.</inlineHelpText>
        <label>Term Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalDiscountAmount__c</fullName>
        <description>Total discount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>(SBQQ__ProratedListPrice__c - SBQQ__CustomerPrice__c) * SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (Amt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Cost for one unit of product quoted on this line item.</description>
        <inlineHelpText>Cost for one unit of product quoted on this line item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
        <inlineHelpText>Asset upgraded by this quote line. When the quote is contracted this asset&apos;s Usage End Date will be populated to indicate that it&apos;s retired.</inlineHelpText>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Web Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeWebLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription upgraded by this quote line. When the quote is contracted this subscription&apos;s Terminated Date field will be populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeWebLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftAmount__c</fullName>
        <description>This is measured as a currency amount. This is a system-calculated field and Uplift can only be applied in %.</description>
        <inlineHelpText>This is measured as a currency amount.</inlineHelpText>
        <label>Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Uplift__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is measured as a percent.</description>
        <inlineHelpText>Enter this as a percent.</inlineHelpText>
        <label>Uplift</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__VolumeDiscount__c</fullName>
        <description>Volume discount in amount of Opportunity&apos;s currency applied to this line item.</description>
        <inlineHelpText>Volume discount amount applied to this line item.</inlineHelpText>
        <label>Volume Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Web Quote Line</label>
    <nameField>
        <displayFormat>WQL-{000000}</displayFormat>
        <label>Quote Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>